# game-programming

./: .gitignore  CMakeLists.txt  cmake_install.cmake  generate.sh  project.project  project.workspace  readme.md
Dependencies/glew-2.2.0/lib/: libGLEW.so.2.2.0
Dependencies/glfw-3.3.8/: cmake_install.cmake  cmake_uninstall.cmake
Dependencies/glfw-3.3.8/examples/: boing  cmake_install.cmake  gears  heightmap  offscreen  particles  sharing  simple  splitview  wave
Dependencies/glfw-3.3.8/src/: GLFW.project  cmake_install.cmake  cmake_uninstall.cmake
Dependencies/glfw-3.3.8/src/src/: cmake_install.cmake
Dependencies/glfw-3.3.8/tests/: clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  opacity  reopen  tearing  threads  timeout  title  triangle-vulkan  windows
res/shaders/: Basic.shader
src/: Window.cpp  Window.h  main.cpp
src/graphics/: IndexBuffer.cpp  IndexBuffer.h  Renderable2D.cpp  Renderable2D.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/math/: Mat4.cpp  Mat4.h  Math.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h
src/utils/: Error.h  Image.cpp  Image.h  fileutils.h
